--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "debounce": "^2.2.0",
     "framer-motion": "^11.18.2",
     "gsap": "^3.12.7",
+    "lodash.debounce": "^4.0.8",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-countup": "^6.5.3",
@@ -21,6 +23,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
