--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "framer-motion": "^11.18.2",
     "gsap": "^3.12.7",
     "lodash.debounce": "^4.0.8",
+    "lucide-react": "^0.476.0",
     "next": "15.1.7",
-    "react": "^19.0.0",
+    "react": "^18.3.1",
     "react-countup": "^6.5.3",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-spring": "^9.7.5"
   },
