--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
-    "react-spring": "^9.7.5"
+    "react-spring": "^9.7.5",
+    "turbopack": "^0.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
